# python_projects

./: .gitignore  Big_project1.py
Big/: main.py
Big/index/: index.py
Big/parser/: parser.py
Big/search/: search.py
Big_Project2/: main.py  models.py  parser.py  pyproject.toml  utils.py
Big_Project2/plugins/: error_stats.py  user_activity.py
Big_Project2/src/big_project2/: main.py  models.py  parser.py  utils.py
Big_Project2/src/big_project2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
Big_Project2/src/big_project2/plugins/: error_stats.py  user_activity.py
Big_Project3/: LICENSE  Toy.py  main.py  main2.py  parser.py  project.txt  pyproject.toml
Big_Project3/core/: async_urls.py
Big_Project3/index/: index.py  indexation.py
Big_Project3/parser/: parser.py
Big_Project3/search/: search.py
Big_Project3/src/big_project3/: main.py
Big_Project3/src/big_project3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
Big_Project3/src/big_project3/parser/: parser.py
Big_Project4/: README.md  pyproject.toml
Big_Project4/src/box_game_Nuran.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
Big_Project4/src/boxer_mini_console_game/: box_controller.py  box_model.py  box_view.py  main.py
Big_Project5/: .gitignore
Big_Project5/first/: MANIFEST.in  pyproject.toml
Big_Project5/first/first/: settings.py  urls.py
Big_Project5/first/firstapp/: admin.py  models.py  urls.py  views.py
Big_Project5/first/firstapp/static/: firstexample.css
Big_Project5/first/firstapp/templates/: 404.html
Big_Project5/first/firstapp/templates/first/: alldetails.html  base.html  details.html  firstexample.html  ifelse.html  ifelseincluding.html  main.html  queryset.html
Big_Project6(Task_Manager_in_Django)/src/src/: settings.py
Big_Project6(Task_Manager_in_Django)/src/src_app/: models.py  urls.py
Big_Project6(Task_Manager_in_Django)/src/src_app/migrations/: 0001_initial.py  0002_alter_category_options_alter_project_options_and_more.py
Big_Project6(Task_Manager_in_Django)/src/src_app/static/src_app/: base.css
Big_Project6(Task_Manager_in_Django)/src/src_app/templates/: base.html
Big_Project6/src/src/: settings.py  urls.py
Big_Project6/src/src_app/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
Big_Project6/src/src_app/templates/: base.html
Big_Project6/src/src_app/templates/categories/: categories_delete.html  (+3 more)
DataStructures/: exercise3_HashTable.py  exercise5_queue.py
LinkedList/: exercise4_LinkedLists.py
(+14 files in other folders)
