[build-system]
requires=["setuptools>=61.0"]
build-backend="setuptools.build_meta"

[project]
name="big_project2"
version="0.1.0"
description="Log analyzer with plugin system"
authors=[
    {name="Nuran", email="nberdaliev2005@gmail.com"}
]
requires-python=">=3.10"

dependencies = []

[tool.setuptools.packages.find]
where=["src"]

