[build-system]
requires=["setuptools>=61.0"]
build-backend="setuptools.build_meta"

[project]
name="box-game-Nuran"
version="0.1.0"
description="CLI boxing game with MVC architecture"
readme="README.md"
requires-python=">=3.10"
authors=[
    {name="Nuran"}
]
license={text="MIT"}

[project.scripts]
box_game="boxer_mini_console_game.main:main"

[tool.setuptools.packages.find]
where=["src"]