[build-system]
requires=["setuptools>=68", "wheel"]
build-backend="setuptools.build_meta"
[project]
name="firstapp-boxers"
version="0.1.0"
description="Reusable Django app with boxer pages"
requires-python=">=3.10"
dependencies=["Django>=6.0, <7.0"]
[tool.setuptools.packages.find]
where=["."]
include=["firstapp*"]
[tool.setuptools.package-data]
firstapp=["templates/**/*.html", "static/**/*.css"]